fix alignment of form elements

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -34,31 +34,33 @@
   font-style: normal;
   font-weight: 900;
   line-height: normal;
-  margin-left: 36px;
+  margin-left: 22px;
 }
 .modal__form {
-  margin-left: 36px;
+  margin-left: 22px;
+  margin-right: 22px;
 }
 .modal__input-name {
   margin-bottom: 30px;
 }
+
 .modal__input-name,
 .modal__input-description {
   border-top: none;
   border-right: none;
   border-left: none;
-  width: 90%;
   background: none;
   color: black;
   border-color: rgba(0, 0, 0, 0.2);
   padding-bottom: 13px;
+  width: 100%;
   padding-left: 0px;
   padding-right: 0px;
 }
 .modal__button {
   background-color: black;
   color: white;
-  width: 90%;
+
   height: 50.152px;
   border-radius: 2px;
   color: #fff;
@@ -69,7 +71,7 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 36px;
-  margin-left: auto;
+  width: 100%;
   margin-top: 48px;
 }
 .modal__close {
